syntax = "proto3";

option csharp_namespace = "Shared";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc CreateFullName (FullNameRequest) returns (FullNameReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message FullNameRequest {
	string firstName = 1;
	string lastName = 2;
}

message FullNameReply {
	string fullName = 1;
	string loginName = 2;
}